--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,22 @@
+# WP
 *.log
 wp-config.php
-wp-content/advanced-cache.php
-wp-content/backup-db/
-wp-content/backups/
-wp-content/blogs.dir/
-wp-content/cache/
-wp-content/upgrade/
-wp-content/uploads/
-wp-content/wp-cache-config.php
-wp-content/plugins/hello.php
-
+/wp-content/languages
+/wp-content/plugins
+/wp-content/themes/*
+/wp-content/index.php
+/wp-admin
+/wp-includes
 /.htaccess
 /license.txt
 /readme.html
 /sitemap.xml
 /sitemap.xml.gz
+/index.php
+/wp-*.php
+/xmlrpc.php
 
+#CHOOSEN THEME
+!/wp-content/themes/accelerate
+# OTHERS
+/nbproject
